@@ -21,7 +21,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * The type Post service.
@@ -85,7 +84,7 @@ public class PostService {
         // 첨부파일
         List<File> attachments = files.stream()
             .filter(f -> f.getFileType() == FileType.ATTACHMENT)
-            .collect(Collectors.toList());
+            .toList();
 
         return postMapper.toPostDetailResponse(postEntity, thumbnail, attachments);
     }
